@@ -1,3 +1,8 @@
+2018-07-13  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* unicode.c: Fix error and validation of valid modified-utf7
+	encoding.
+
 2018-07-11  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* unicode.c: Implement unicode_x_smap_modutf8 pseudo-encoding.
